corrects spacing of product-extra

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h6 {
   font-style: normal;
   font-size: .75rem;
   border-bottom: 1px solid #000;
-  margin: 0;
+  margin: 0px 0px 20px 0px;
 }
 
 
@@ -153,6 +153,7 @@ button:hover {
   color: #000;
   font-style: bold;
 }
+
 
 #vid {
   display: flex;
